--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     id="cordova-plugin-ble-manager"
     version="1.1.1">
 
-    <name>BLE</name>
+    <name>BLEManager</name>
     <description>Bluetooth Low Energy (BLE) Manager</description>
     <license>Apache 2.0</license>
     <keywords>bluetooth, BLE, bluetooth low energy, bluetooth smart</keywords>
